<resources>
    <string name="app_name">PenguinPay</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_amount">Amount</string>
    <string name="label_send">Send</string>
    <string name="label_select_country">Select Country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_recipient">Recipient will receive: %s Binaria</string>
</resources>