<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:paddingHorizontal="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/fname" />

        <LinearLayout
            android:id="@+id/selectPhone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/phone">

            <ImageView
                android:id="@+id/selectedImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/countryPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:drawablePadding="5dp"
                app:drawableEndCompat="@android:drawable/arrow_down_float"
                app:drawableTint="@color/black"
                tools:text="+234" />

        </LinearLayout>

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_mobile_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selectPhone"
            app:layout_constraintTop_toBottomOf="@id/lname"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_amount"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/phone" />

        <TextView
            android:id="@+id/receiveAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_recipient"
            android:textColor="@color/design_default_color_primary_dark"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/loading"
            app:layout_constraintTop_toBottomOf="@id/amount" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendMoneyContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/receiveAmount">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:elevation="3dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sendMoney"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_send"
                android:textAllCaps="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/sendMoneyContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>